Santa alignment fixed.

--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -317,16 +317,16 @@ p.title-text-absolute {
     display: block;
     
     @media screen and (min-width: 280px) and (max-width:350px) {
-         margin-top: 30px;
+         margin-top: 15px;
     }
     @media screen and (min-width: 351px) and (max-width:410px) {
-         margin-top: -35px;
+         margin-top: -5px;
     }
-    @media screen and (min-width: 411px) and (max-width:991px) {
-         margin-top: -10px;
+    @media screen and (min-width: 411px) and (max-width:440px) {
+         margin-top: 40px;
     }
-    @media screen and (min-width: 992px) {
-         margin-top: 20px;
+    @media screen and (min-width: 441px) {
+         margin-top: 65px;
     }
 }
 
